<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="search_vacancies">Поиск вакансий</string>
    <string name="enter_request">Введите запрос</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>
    <string name="no_internet">Нет интернета</string>
    <string name="failed_to_get_list_of_vacancies">Не удалось получить\nсписок вакансий</string>
    <string name="there_are_no_such_vacancies">Таких вакансий нет</string>
    <string name="filtering_settings">Настройки фильтрации</string>
    <string name="place_of_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемаяя зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="choosing_a_place_to_work">Выбор места работы</string>
    <string name="country">Cтрана</string>
    <string name="region">Регион</string>
    <string name="select_country">Выбор страны</string>
    <string name="select_region">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="there_is_no_such_industry">Такой отрасли нет</string>
    <string name="there_is_no_such_region">Такого региона нет</string>
    <string name="failed_to_get_list">Не удалось получить\nсписок </string>
    <string name="choose">Выбрать</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="industry_selection">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="job_vacancy">Вакансия</string>
    <string name="found">Найдено</string>
    <string name="the_list_is_empty">Список пуст</string>
    <string name="working_on_the_application">Над приложением\nработали</string>
    <string name="said">Саид Исмаилов</string>
    <string name="evgeniy">Евгений Никитин</string>
    <string name="nikita">Никита Слепченко</string>
    <string name="yulia">Юлия Волкова</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_from">от %1$s %2$s</string>
    <string name="salary_to">до %1$s %2$s</string>
    <string name="salary_from_to">от %1$s до %2$s %3$s</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vacancy_required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="email">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="search_results_count">Найдено %1$d вакансий</string>
    <string name="error_no_internet">Проверьте подключение к интернету</string>

    <plurals name="plurals_vacancy">
        <item quantity="zero">вакансий</item>
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="other">%d вакансий</item>
    </plurals>
</resources>
