<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/white_black"
    tools:context=".filter.ui.PlaceOfWorkFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/place_of_work_toolbar"
        style="@style/ToolbarAppStyle"
        app:title="@string/choosing_a_place_to_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/place_of_work_country"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_size_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_of_work_toolbar">
        <TextView
            style="@style/FiltrationVacancyTextStyleRegular"
            android:layout_marginStart="@dimen/dimens_size_16"
            android:layout_gravity="center|start"
            android:text="@string/country" />
        <ImageView
            style="@style/ForwardArrow"
            android:src="@drawable/icon_arrow_forward" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/place_of_work_region"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_size_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_of_work_country">
        <TextView
            style="@style/FiltrationVacancyTextStyleRegular"
            android:layout_marginStart="@dimen/dimens_size_16"
            android:layout_gravity="center|start"
            android:text="@string/region" />
        <ImageView
            style="@style/ForwardArrow"
            android:src="@drawable/icon_arrow_forward" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
