<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_region_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/white_black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_size_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dimens_size_16"
            android:clickable="true"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_size_4"
            android:fontFamily="@font/ys_text_medium"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/dimens_size_19"
            android:text="@string/select_region"
            android:textColor="?attr/black_white"
            android:textSize="@dimen/text_size_22" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_input_edit_text"
            style="@style/SearchEditTextStyle"
            android:layout_marginTop="@dimen/dimens_size_8"
            android:layout_marginBottom="@dimen/dimens_size_16"
            android:hint="@string/enter_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/reset_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_size_12"
            android:background="?attr/lightgray_gray"
            android:src="@drawable/icon_close"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/text_input_edit_text"
            app:layout_constraintEnd_toEndOf="@id/text_input_edit_text"
            app:layout_constraintTop_toTopOf="@id/text_input_edit_text"
            app:tint="@color/black"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/output_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimens_size_8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:listitem="@layout/item_country"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/dimens_size_36"
            android:layout_height="@dimen/dimens_size_36"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/placeholder_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_incorrect_request"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/placeholder_message"
                style="@style/DetailsVacancyTextStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimens_size_16"
                android:textSize="@dimen/text_size_22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/placeholder_image"
                tools:text="@string/there_is_no_such_region" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>
